# person_detector

./: CMakeLists.txt  README.md  package.xml
include/: box.h  common.hpp  detection_core.h
launch/: detection.rviz  detector_node.launch
src/: box.cc  detect_node.cpp  detection_core.cc
